2006-10-09  Josh Sled <jsled@asynchronous.org>

	* art/: Add, with 2.0 {banner,icon,logo,splash} art.
	
2006-09-26  Derek Atkins  <derek@ihtfp.com>

	* lib/libqof/qof/qofquery.[ch]:
	  Implement SubQuery functionality in QOF:  qof_query_run_subquery()
	  Now you can run one query off of the results of another query.

	Add the ability to override the default sort (#150799).
	Override the Transaction Number to sort numerically.
	* lib/libqof/qof/qofclass.h:
	* lib/libqof/qof/qofquery.c:
	* lib/libqof/qof/qofquerycore-p.h:
	* lib/libqof/qof/qofquerycore.[ch]:
	  - Publish the QofCompareFunc prototype.
	  - Add a new QofParam param_compfcn parameter
	  - Change QofQuery to use the param_compfcn over the
	    default type compare function.
	  - create (and publish) a qof API to compare strings
	    as numbers:  qof_string_number_compare_func()
	* src/engine/Transaction.c:
	  Assign TRANS_NUM to use qof_string_numer_compare_func()

2006-09-23  Derek Atkins  <derek@ihtfp.com>

	* src/ledger-core/split-register*.c:
	  suspend events around the Commit(). Fixes #347089 when combined
	  with r14495.

	* src/gnome/druid-acct-period.c:
	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/gnome/window-reconcile.c:
	  disable lot scrubbing during Check & Repair (#357370).
	  Lots are supposed to be disabled in the 2.0 release until we
	  get the cap-gains code working.  IMHO the cap-gains code should
	  deal with extra txn splits instead of creating additional txns.

2006-09-19  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Remove mt940 module completely from the build and
	SVN because all of its functionality has been moved into the hbci
	(aqbanking) module.

2006-09-19  Andreas Köhler  <andi5.py@gmx.net>

	* $some.glade: Use some more automatic scrollbars.

	* src/backend/file/gnc-backend-file.c:
	* src/gnome-utils/gnc-file.c: Do not complain about non-existent
	  files if we save to a new file. In pass one we ignore the error