@@ -1,3 +1,9 @@
+2006-11-05  David Hampton  <hampton@employees.org>
+
+	* src/report/standard-reports/category-barchart.scm:
+	* src/report/standard-reports/account-piecharts.scm: Fix some
+	scheme inexact errors.  Fixes 347462.
+
 2006-10-09  Josh Sled <jsled@asynchronous.org>
 
 	* art/: Add, with 2.0 {banner,icon,logo,splash} art.
